# tauri-mba-zapp

./: package.json  pnpm-lock.yaml  turbo.json
examples/chatgpt-mba/: .gitignore  README.md  package.json
examples/chatgpt-mba/.zapp/: spec.yml  zapp.ts
examples/chatgpt-mba/src-tauri/: Cargo.toml  tauri.conf.json
examples/chatgpt-mba/src-tauri/src/: main.rs
