[package]
description = "Use ChatGPT from your menu bar"
edition = "2021"
name = "chatgpt-mba"
rust-version = "1.57"
version = "1.0.0"

[build-dependencies.tauri-build]
features = [ ]
version = "1.2"

[dependencies]
serde_json = "1.0"

  [dependencies.serde]
  features = [ "derive" ]
  version = "1.0"

  [dependencies.tauri]
  features = [ "macos-private-api", "shell-open", "system-tray" ]
  version = "1.2"

  [dependencies.tauri-plugin-positioner]
  features = [ "system-tray" ]
  version = "1.0.4"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]
